[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ShopItem.gd" type="Script" id=1]

[node name="ShopItem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" type="Button" parent="."]
anchor_right = 0.4
margin_bottom = 50.0
text = "ItemName"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="."]
anchor_left = 0.4
anchor_right = 0.5
margin_bottom = 50.0
text = "X/X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentEffect" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.85
margin_bottom = 50.0
text = "Effect"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextBonus" type="Label" parent="."]
anchor_left = 0.85
anchor_right = 1.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "+ NewEffect"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Visualization" type="TextureProgress" parent="."]
anchor_right = 0.4
margin_top = 50.0
margin_bottom = 75.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrayOut" type="ColorRect" parent="."]
visible = false
anchor_right = 0.4
margin_bottom = 50.0
color = Color( 0.454902, 0.454902, 0.454902, 0.54902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotEnoughMD" type="Label" parent="."]
visible = false
anchor_left = 0.4
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 75.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Not Enough Meteor Dust!"
align = 1
valign = 1
[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
